* Commented out the command in ScanCore->update_db() that tried to disable triggers. Normal users can't set the 'session_replication_role' and I will need some time to understand the effects of allowing a user to disable the triggers (ideally find a way to restrict the trigger disable to just the scancore DB). See issue #76. This also fixes a bug where ScanCore would not sync. * Added 'timout 15' to all calls in 'AN::Tools::Striker->_gather_node_details()' that might hang with a failed or pending fence so that the Striker UI won't hang. Still need to make sure that the display is sane in a hung case though. * Removed the old email section of the default striker.conf. * Added 'sys::install_manifest::default::update_os = [0,1]' to allow the user to control if Anvil! nodes get updated by controlling the install manifest '<update os="true" />' element's attribute. * Added '--no-os-updates' to striker-installer to prevent OS updates during the dashboard stage-2 as well. * Updated 'anvil-generate-iso' to support RHEL 6.7 and made the 6.x set by the OS name.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -10,47 +10,6 @@
 
 ### Common - These values apply to all utilities.
 
-# This configures how email is sent from this machine. Please be sure to set
-# the values below to the values given to you by your mail administrator (if
-# that's not you).
-# 
-# If you wish to enable redundant alert email delivery, you can do so by 
-# setting 'smtp::alt_server', which will be used if/when 'smtp::server' can't
-# be reached. Please note that the credentials (user name and password) must
-# be the same on both servers for this to work.
-#
-# This is the mail server to connect to when sending email.
-smtp::server			=	mail.example.com
-smtp::alt_server		=	mail2.alteeve.com
-
-# This is the TCP port used to connect to the mail server(s).
-smtp::port			=	587
-smtp::alt_port			=	587
-
-# This is the email address/IMAP user to send to the mail server. It is also
-# the address used in the "From: " field for emails sent from this machine.
-# NOTE: If you IMAP user name is not an email address, this may not work (it
-# has not been tested). If you have trouble, please let us know:
-# - https://alteeve.ca/w/Support
-smtp::username			=	alert@example.com
-
-# This is the password used for the email account above.
-smtp::password			=	secret
-
-# This is the security level to use when connecting to the peer, if needed.
-smtp::security			=	STARTTLS
-
-# This tells us to use an encrypted connection to the mail server. Set to '0'
-# to send email plain-text (not recommended!).
-smtp::encrypt_pass		=	1
-
-# This is the domain given to the mail server when establishing the connection.
-smtp::helo_domain		=	example.com
-
-# This sets the "sending domain" when sending email. It should match
-# smtp::server in most cases.
-mail_data::sending_domain	=	example.com
-
 # If you create a custom skin, uncomment this and change the value to the name
 # of the directory your skin is stored in under /var/www/html/skins/
 #sys::skin			=	alteeve
@@ -59,6 +18,16 @@ mail_data::sending_domain	=	example.com
 # status pages. Set to '0' to never refresh the page. Yes, this is because we
 # suck at AJAX... Patches welcomed. ;)
 #sys::reload_page_timer		=	0
+
+###############################################################################
+# Install Manifests                                                           #
+###############################################################################
+
+# By default, if a node has internet access, it will be updated during the 
+# installation process. If you are in an environment where updates must be 
+# tested and wish to stick with the versions of programs on the source, set 
+# this to '0' to disable the install-time update attempt. 
+#sys::install_manifest::default::update_os	=	1
 
 # By default, the install manifest uses the standard MTU of 1500 for all
 # networks. This is not (yet) configurable in the Install Manifest menu. If you
@@ -72,10 +41,11 @@ mail_data::sending_domain	=	example.com
 
 # In rare cases, you may wish to force DRBD into UpToDate/UpToDate state 
 # without an initial sync. Generally this is not a good idea because DRBD's
-# backing devices won't be the same until data is written to them via DRBD. So
+# backing devices won't be identical until data is written to them via DRBD. So
 # a verify call will find a lot of inconsistencies should it be run. However,
 # if you have a large storage pool and data is rapidly written to it, you may
 # wish to enable this. 
+# 
 # In short; this calls; 'drbdadm -- --clear-bitmap new-current-uuid <res>'
 # when first building the DRBD resource.
 #sys::install_manifest::default::immediate-uptodate	=	0
