* Added some logging to some more AN::Tools methods and added warnings to those that cause deep recursions and did some misc cleanup. * Created 'AN::Tools::Get->what_am_i()' that returns 'node' or 'dashboard'. * Modified 'AN::Tools::ScanCore->get_nodes_cache()' to return the cache of a certain type only. * Created 'AN::Tools::ScanCore->get_power_check_data()' that returns the power check command for all of the nodes that the caller known about. * Created 'AN::Tools::ScanCore->insert_or_update_variables()' that allows for data to be inserted (or updated) in the 'variables' table. This method allows for just the 'variable_value' to be updated. * Reworked ScanCore's 'read_cache_files()' to actually read from the database's cache now. * Reworked scan-ipmitool to pull it's data from the database instead of cache files as well. Moved the database connection up to accommodate this. * Also updated scan-ipmitool to set the peer's 'sys::node::<node_name>::last_seen' variable to 'off' or 'on' in preparation for the coming 'sys::single_node_start::enabled' feature. Also updated striker.conf with the new variables. * NOTE: the above changes to scan-ipmitool deprecate tools/anvil-report-ipmi-details. Once tested to be working, that tool will be deleted. * Updated the 'variables' database table to add the 'variable_section' column which will be used later to group variables in the UI.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -832,6 +832,44 @@ remote-usb::enable_remote_usb_mount	=	0
 #       result is that approximately 4 GiB is reserved for the host.
 #sys::unusable_ram				=	3221225472
 
+# By default, if a node boots and it can't connect to its peer, 
+# anvil-safe-start will hold until it can (possibly forever). This is done to
+# prevent a "fence loop" where the nodes go into a loop where they keep 
+# rebooting each other. Fence loops are fairly low risk, and in remote or 
+# autonomous deployments, it may well be the case that a node could fail and be
+# unrepairable for some time. While failed, the good peer may reboot because of
+# a power failure, temperature excursion or similar. 
+# 
+# To account for this, you can enable this feature to have anvil-safe-start 
+# check to see if the last known state of the peer was "off", then allow the
+# startup to proceed. This will cause the lost node to be fenced and allow the
+# start-up to proceed. 
+# 
+### WARNING: This is potentially dangerous and should only be enabled in cases
+###          where an Anvil! will run autonomously and/or administrators won't
+###          be able to rectify problems promptly. 
+# 
+#sys::single_node_start::enabled		=	0
+sys::single_node_start::enabled			=	1
+
+# When 'sys::enable_single_node_start', a node is allowed to start once per
+# period of time. The default is once per hour (86,400 seconds). This is meant
+# to help mitigate the risk of a fence loop. If, by some accident or bug, both
+# nodes are actually alive but unable to communicate, and if both marked the
+# other as "last seen; off", they will both boot after being fenced, not wait
+# for access and fence their peer. 
+# 
+# This delay alters that behaviour by setting a time stamp when it last started
+# without access to the peer. If that time stamp is less than this number of
+# seconds ago, anvil-safe-start will pause until enough time has passed. In 
+# this way, should a fence loop occur, the nodes will loop only once per period
+# of time (ie: once per 24 hours).
+# 
+# Note that the first boot after losing a peer will always happen immediately
+# because no single-node-start time stamp will exit. It would limit the second
+# boot in the timeout window.
+#sys::single_node_start::boot_delay		=	86400
+
 
 ###############################################################################
 # Default Install Manifest value overrides                                    #
