* Updated 'AN::Tools::ScanCore->insert_or_update_variables()' to allow restricting the requested variable by a given table and UUID. * Created 'AN::Tools::ScanCore->read_variable()' to read a variable from the ScanCore database. * Created in ScanCore the update_db_variables() function to keep the variables table synced. * Updated the 'variables' table to add the columns 'variable_source_uuid' and 'variable_source_table' to flag a variable as belonging to a specific record from a specific table (like a hosts' host_uuid'). * Updated anvil-safe-start's in-development 'single node start' feature to add 'sys::single_node_start::boot_delay' that had a node pause for that period of time before giving up on the peer and trying to boot on its own (a-la DRBD's degraded wait for connection timeout m echanism). * Added some more of the logic to implement anvil-safe-start's in-development 'single node start', still much to do though.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -868,7 +868,13 @@ sys::single_node_start::enabled			=	1
 # Note that the first boot after losing a peer will always happen immediately
 # because no single-node-start time stamp will exit. It would limit the second
 # boot in the timeout window.
-#sys::single_node_start::boot_delay		=	86400
+#sys::single_node_start::boot_frequency		=	86400
+
+# When 'sys::single_node_start::enabled' is 1, the first node up will still 
+# wait a bit for the peer to come online, just in case it is OK but booting a
+# little slower. This controls how long it waits before proceeding with the 
+# single-node start.
+#sys::single_node_start::boot_delay		=	300
 
 
 ###############################################################################
