NOTE: Broken commit; Working on updating ScanCore to use the database to send alerts, which is not complete yet.
* Added basic debugging capability to 'AN::Tools::Get->date_and_time()' to assist with debugging.
* Moved the following methods from 'AN::Tools::Remote' to 'AN::Tools::System' (where they make more sense to be);
** delayed_run
** dual_command_run
** synchronous_command_run
** _avoid_duplicate_delayed_runs
* Deleted several retired modules and scripts.
* Added to the 'smtp' table the columns for alternate/backup mail servers. Updated all related methods and functions to use these.
* Updated ScanCore to update it's data about the Anvil! it is a member of at start up and again in each loop via the new 'update_anvil_data()' function.
* Finished the 'anvil-safe-start' logic for single node booting. Now on to testing!

Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -109,8 +109,8 @@ sys::log::log_pid					=	0
 # 
 # NOTE: Be sure to put the value in double-quotes.
 # 
-alerts::recipient::1::email		=	name="Awesome Person",email="awesome@example.com",language="en_CA",level="notice"
-alerts::recipient::2::file		=	file="/var/log/alerts.en_CA.log",language="en_CA",level="info",units="imperial"
+#alerts::recipient::1::email		=	name="Awesome Person",email="awesome@example.com",language="en_CA",level="notice"
+#alerts::recipient::2::file		=	file="/var/log/alerts.en_CA.log",language="en_CA",level="info",units="imperial"
 
 
 ###############################################################################
