* Created 'AN::Tools::Get->node_upses()' which returns a list of UPSes known to a given node (or nodes) in an Anvil!. This is based on the code committed yesterday from 'AN::Tools::Striker->_display_watchdog_panel()'. * Fixed up 'AN::Tools::ScanCore.pm->target_power' to properly parse out the cached 'power_check' data to ignore PDU agents and use agents that can directly confirm a target's power state. * Fixed a bug in 'ScanCore->read_cache' where '$an->data->{cache}{$node_name}{info}{$node_cache_name}' was set to the name, not the data. * Updated 'ScanCore->do_post_scan_dashboard_tasks()' to query the node's 'node_uuid' value and used that for the 'AN::Tools::ScanCore->target_power' calls. Also removed old direct power checks / sets in ScanCore to use the method instead. This meant that the 'check_node_power_state()' and 'boot_node()' functions were deleted as they were no longer needed. * Big one!! Got power-based load shedding working in ScanCore! :D * Updated scan-apc-ups to connect to the DB(s) before looking for UPSes so that dashboards can now look for UPSes connected to Anvil! systems it known about and scan the ones that are found. This re-resolved issue #82. Moved the 'prep_databases()' call down below where we check that we actually found some UPSes.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -352,6 +352,30 @@ scancore::enabled			=	1
 # good and that the nodes were not cleanly stopped via Striker's WebUI.
 scancore::disable::boot_nodes		=	0
 
+# By default, ScanCore running on the nodes will automatically shed load in two
+# cases;
+# 1. If both/all UPSes feeding it lose mains for a period of time. This is done
+#    to maximize battery runtime by reducing the power draw on the UPSes.
+# 2. If both nodes have entered a thermal warning state for a period of time.
+#    This is done to reduce the amount of heat being generated to slow down the
+#    speed that a server room/data center heats up after losing cooling.
+# This behaviour can be disabled by setting this to '1'.
+scancore::disable::load_shedding	=	0
+
+# When both nodes lose power, load shedding (when enabled) is delayed for a 
+# period of time so that load shedding doesn't occur for short, transient power
+# failures. For example, shedding load when you're moving the rack to new power
+# outlets is slightly overkill. This controls how long (in seconds) we need to 
+# lose all power before load shedding is triggered. The default is 300 (5m).
+scancore::power::load_shed_delay	=	300
+
+# When both nodes enter a thermal warning state, load shedding (when enabled)
+# is delayed for a period of time. The logic here is the same as with power 
+# load shedding delay, except the likelyhood of a transient thermal event 
+# impacting both nodes is less likely, so the timeout is set to 120 (2m).
+scancore::temperature::load_shed_delay	=	120
+
+
 # Setting this to an integer will enable a post-scan check of nodes (from the 
 # dashboard) to see if a node's cluster lock manager is hung (as could happen
 # in some rare dual-failure scenarios). If set, the value will be used as a
