* Fixed a bug where 'AN::Tools::Get->what_am_i()' would fail when it tried to get the host type while it was trying to record the host for the first time. * Removed some deprecated stuff from striker.conf.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -19,6 +19,7 @@
 # suck at AJAX... Patches welcomed. ;)
 #sys::reload_page_timer		=	0
 
+
 ###############################################################################
 # Install Manifests                                                           #
 ###############################################################################
@@ -55,62 +56,11 @@
 # System logging                                                             #
 ##############################################################################
 
+# This sets the logging of the Striker dashboard.
+sys::log_level						=	1
+
 # If you want to see each processes PID in the logs, set this to '1'.
 sys::log::log_pid					=	0
-
-
-##############################################################################
-# ScanCore Alert Targets                                                     #
-##############################################################################
-
-# This controls who gets alerts. The available alert options are:
-# 
-# - debug;    Useful for trying to solve problems and should only be logged.
-#             This will generate an alert on just about every state change.
-# - info;     This level will generate an alert on events that are almost
-#             always harmless.
-# - notice;   This is the lowest alert level that most people will actually
-#             want to use. It includes events like migrations, servers booting,
-#             BBU/FBU self tests, etc.
-# - warning;  Most technical staff will want to receive these alerts. Any state
-#             change that could indicate an interruption will use this alert
-#             level.
-#             NOTE: This is the default level
-# - critical; This alert level will be of interest to non-technical users, like
-#             managers. Alerts at this level almost always indicate a serious
-#             event has occured, like a node being lost/fenced, thermal shut
-#             down occuring and so forth.
-#
-# A user who is listening to a given alert level will also receive all higher
-# level warnings.
-# 
-# Alert recipients can either be 'email' or 'file'. The 'email' type are meant
-# for humans to receive and are dispatched via a local postfix relay. The
-# 'file' type records alerts to the specified file which sits on the local
-# disk until it is collected by a person or program.
-# 
-# By default, metric units are used in reporting values. If the user prefers
-# imperial measurements (ie: Fahrenheit instead of Celsius for temperatures),
-# you can use 'units=imperial'.
-# 
-# E-mail recipients are entered in the following format:
-#alerts::recipient::1::email		=	name="Admin User",email="admin@example.com",language="en_CA",level="notice"
-#
-# File recipients are entered in the following format, with "imperial"
-# measurements selected as an example:
-#alerts::recipient::2::file		=	file="/var/log/alerts.en_CA.log",language="en_CA",level="info",units="imperial"
-#
-# What is important is that the integer after 'alerts::recipient::X' is unique.
-# 
-# NOTE: If a language is selected but not supported, the alert will fall back
-#       to 'en_CA'. Please be sure all the scan agents you plan to use, along
-#       with ScanCore itself, have the appropriate language strings before you
-#       use them!
-# 
-# NOTE: Be sure to put the value in double-quotes.
-# 
-#alerts::recipient::1::email		=	name="Awesome Person",email="awesome@example.com",language="en_CA",level="notice"
-#alerts::recipient::2::file		=	file="/var/log/alerts.en_CA.log",language="en_CA",level="info",units="imperial"
 
 
 ###############################################################################
