* Turns out the installed needs those 'ISO' files... >_< * Fixed some typos in striker.conf. * Updated anvil-generate-iso to better handle source ISOs specified as ./X or simple 'X' (implying the source is in the local directory). * Updated striker-manage-install-target to handle cases where shorewall is not configured (as is the case when --router-mode isn't used during striker install).
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -827,7 +827,7 @@ remote-usb::enable_remote_usb_mount	=	0
 sys::single_node_start::enabled			=	1
 
 # When 'sys::enable_single_node_start', a node is allowed to start once per
-# period of time. The default is once per hour (86,400 seconds). This is meant
+# period of time. The default is once per day (86,400 seconds). This is meant
 # to help mitigate the risk of a fence loop. If, by some accident or bug, both
 # nodes are actually alive but unable to communicate, and if both marked the
 # other as "last seen; off", they will both boot after being fenced, not wait
