* Added the ability to specify DRBD's 'disk { c-plan-ahead, c-max-rate, c-min-rate and c-fill-target }' in an Install Manifest. It is a hidden feature, so users need to customize their manifests manually. Set the defauls to: ** c-plan-ahead 7; ** c-max-rate 110M; ** c-min-rate 30M; ** c-fill-target 1M; * Added 'anvil-safe-start::drbd::always_boost = [0|1]' to anvil-safe-start that will allow for the sync speed to be boosted when the 'max_wait_time' is set to a very high number. Internally, the variables used were changed from 'resync_X' to 'resync::X'. * Added the names for 'Group 1 State' and 'Group 2 State' for the appropriate OIDs in anvil-kick-apc-ups.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -145,10 +145,11 @@ tools::anvil-kick-apc-ups::enabled	=	0
 tools::anvil-safe-start::enabled	=	0
 
 # During anvil-safe-start, when it first connects the replicated storage layer,
-# it checks to see if one of the nodes is 'Inconsistent'. If it is, it will 
-# pause the boot process, boost the resync speed and then wait 
-# 'anvil-safe-start::drbd::resync_delay' seconds (default is 15). Then it will 
-# check to see the estimated timed to reach full resync. 
+# it checks to see if one of the nodes is 'Inconsistent'. If it is, it checks 
+# to see how long the sync will take at the default (adaptive) sync rate. If it
+# is greater than the 'max_wait_time', it will boost the resync speed and then
+# wait 'resync_delay' seconds (default is 15). Then it will check to see the 
+# estimated timed to reach full resync. 
 # 
 # If it is less than 'max_wait_time', it will continue to wait, watching the 
 # resync process. Once it reaches UpToDate/UpToDate on both nodes, it will 
@@ -158,12 +159,16 @@ tools::anvil-safe-start::enabled	=	0
 # the resync speed will be reset to default and the boot process will proceed
 # with the Inconsistent node being treated as degraded (meaning servers will 
 # likely not boot on it). If you want to "boost and hold" so that the node does
-# not appear online until it has resync'ed, set this to 'wait'. 
+# not appear online until it has resync'ed, set this to 'wait' and set 
+# 'always_boost' to '1'. This tells the system to always boost the sync speed
+# on startup, regardless of the estimated time to sync on the default sync 
+# speed.
 # 
 # By default, the boosted speed is 80 MB/sec and the maximum wait time is five
 # minutes (300 seconds). If you wish to tune these values, you can do so here.
 # Please use integers only!
 # 
+#anvil-safe-start::drbd::always_boost	=	0
 #anvil-safe-start::drbd::boost_speed	=	80
 #anvil-safe-start::drbd::max_wait_time	=	wait
 #anvil-safe-start::drbd::resync_delay	=	15
@@ -923,6 +928,20 @@ sys::single_node_start::enabled			=	1
 #sys::install_manifest::default::anvil_drbd_disk_disk-barrier	=	false
 #sys::install_manifest::default::anvil_drbd_disk_disk-flushes	=	false
 #sys::install_manifest::default::anvil_drbd_disk_md-flushes	=	false
+#
+# To tune the resync rate, you can set the following variables to better suit
+# your hardware and load profile. See:
+# - https://blogs.linbit.com/p/128/drbd-sync-rate-controller/
+# 
+# The defaults should be suitable for a standard 1Gbps-SN Anvil! system. If you
+# run 10 Gbps, test the local storage and network speeds. Set 'c-max-rate' to 
+# the 'xM' of the slowest sustained mibibytes/sec and set 'c-min-rate' to ~30%
+# of that. Be careful setting a higher 'c-fill-target' without actively testing
+# application performance during a resync.
+#sys::install_manifest::default::anvil_drbd_disk_c-plan-ahead	=	7
+#sys::install_manifest::default::anvil_drbd_disk_c-max-rate	=	110M
+#sys::install_manifest::default::anvil_drbd_disk_c-min-rate	=	30M
+#sys::install_manifest::default::anvil_drbd_disk_c-fill-target	=	1M
 
 # If you need to control which CPUs DRBD uses, you can do so with cpu mask. For
 # details on how to use this, see: 
