--- a/striker.conf
+++ b/striker.conf
@@ -116,6 +116,20 @@ tools::anvil-kick-apc-ups::enabled	=	0
 # '300'.
 #sys::apc::ups::kick_frequency		=	300
 
+# If you have enabled this feature, you will have an additional pair of 
+# commands shown in the Striker UI called "Power Cycle System" and "Power Off
+# System". The former performs a "Cold Stop", then tells the UPSes to power 
+# off in X seconds, stay off for Y seconds, and then restore power. This is a
+# useful mechanism for a total restart of a HAP system (and anything else
+# powered by the system) for remote deployements.
+# 
+# By default, the default shutdown delay (X) is 60 seconds and the sleep time
+# (Y) is also 60 seconds. You may find that you system takes longer than that
+# to shut down, or you may want to tune how long the UPSes stay off for. These
+# variables allow you to control these values.
+sys::apc::reboot::power_off_delay	=	60
+sys::apc::reboot::sleep_time		=	60
+
 # The 'anvil-safe-start' tool, when enabled, will run when a node powers on.
 # It will perform various sanity checks, including trying to connect to the 
 # peer node. If it can reach the peer, it will join the nodes to the cluster
