* Re-enabled 'AN::Tools::Alert->warning()'. * Removed the call the 'AN::Tools::Alert->warning()' in 'AN::Tools::Check->_environment()' because strings aren't loaded when the environment variables are called. * Updated 'AN::Tools::Cman->get_clustat_data()' to detect and return when cman is not running. * Fixed a bug where 'anvil-safe-start' would not wait for the databases to come up because 'AN::Tools::DB->connect_to_databases()' would error out itself. * Added a check in 'AN::Tools::Get->local_anvil_details()' to call 'AN::Tools::Striker->load_anvil()' if needed and to only look for servers if an Anvil! was successfully loaded. * Cleaned up some logging in 'AN::Tools::Remote->remote_call()'. * Updated 'AN::Tools::Striker->mark_node_as_clean_off()' to allow a 'stop_reason' to be specified. Also fixed it so that the passed-in node_uuid is used to look up the host_uuid in the query, partially fixing a bug where a 'Power Off' or 'Power Cycle' option wouldn't set the future timestamp-based stop reason that prevented ScanCore from booting the nodes back up before the UPSes powered off. * Updated 'AN::Tools::Striker->mark_node_as_clean_on()' to NOT mark the node as clean on if the current stop reason is a future timestamp. This is another part of fixing the issue with nodes being booted before the UPSes shut off. * Fixed some small display related bugs in 'AN::Tools::Striker'. * Fixed a more important display bug in 'AN::Tools::System->synchronous_command_run()' where the output of a synchronous call wasn't being processed properly, causing the output to not be presented to the user. * Fixed ScanCore->do_post_scan_node_tasks() where the Anvil! data wasn't being loaded after each scan run. * Did some work on the anvil-safe-stop load shed logic, though it's likely not working properly yet when called during a power loss event.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -130,6 +130,15 @@ tools::anvil-kick-apc-ups::enabled	=	0
 sys::apc::reboot::power_off_delay	=	60
 sys::apc::reboot::sleep_time		=	60
 
+# When a "Power Cycle" or "Power Off" is requested, the nodes have their 
+# "stop reason" set to a time stamp in the future. This tells ScanCore that the
+# nodes are to be left off until the timestamp expires. This gives the system
+# time to shut down the UPSes. The default is '300' (five minutes), but 
+# depending on your environment, this may not be long enough. You will know 
+# this when, during testing, one or both of the nodes start to boot before the
+# UPSes lose power. In this case, increasing this delay will help.
+#sys::power_off_delay			=	300
+
 # The 'anvil-safe-start' tool, when enabled, will run when a node powers on.
 # It will perform various sanity checks, including trying to connect to the 
 # peer node. If it can reach the peer, it will join the nodes to the cluster
@@ -335,13 +344,13 @@ scancore::disable::load_shedding	=	0
 # period of time so that load shedding doesn't occur for short, transient power
 # failures. For example, shedding load when you're moving the rack to new power
 # outlets is slightly overkill. This controls how long (in seconds) we need to 
-# lose all power before load shedding is triggered. The default is 300 (5m).
-scancore::power::load_shed_delay	=	300
+# lose all power before load shedding is triggered. The default is 120 (2min).
+scancore::power::load_shed_delay	=	120
 
 # When both nodes enter a thermal warning state, load shedding (when enabled)
 # is delayed for a period of time. The logic here is the same as with power 
 # load shedding delay, except the likelyhood of a transient thermal event 
-# impacting both nodes is less likely, so the timeout is set to 120 (2m).
+# impacting both nodes is less likely, so the timeout is set to 120 (2min).
 scancore::temperature::load_shed_delay	=	120
 
 
