* Updated 'AN::Tools::ScanCore->insert_or_update_variables()' to take a UUID or a variable name. Also fixed the alert message for numerous ScanCore methods that were listed as Web methods. * Created two new 'AN::Tools::DB' methods; '->set_update_db_flag()' which sets or clears a timestamp (and waits after setting, if requested) indicating that a portion of the ScanCore database is about to be resynced and '->wait_if_db_is_updating()' which waits until '->set_update_db_flag()' returns that the sync is done. Added calls to these methods in ScanCore and all agents in their 'update_db' functions. * Fixed a bug in 'AN::Tools::Striker->scan_node()' where I was trying to use 'scancore::i_am_a' when it wasn't set. * Updated 'ScanCore->update_db_servers()' to check if a DB column is defined or not. * Added a check to 'ScanCore->avoid_duplicate_run()' to check if another instance is resync'ing and, if so, to check if it's been running for over ten minutes or not. If not, it simply exits. If so, then it assumes something is wrong and proceeds (which will likely terminate that instance). * Updated scan-ipmitool to check if an IPMI device exists before trying to use IPMI tool to check the local chassis power status. * Added an example entry for 'scancore::maximum_ram' to the default 'striker.conf'.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -264,6 +264,16 @@ tools::anvil-self-destruct::hash		=	vSsar3708Jvp9Szi2NWZZ02Bqp1qRCFpbcTZPdBhnWgs
 # /sbin/striker/ScanCore/ScanCore --{enable,disable}
 scancore::enabled			=	1
 
+# ScanCore always checks to see how much RAM it is using at the end of a given
+# scan sweep. This isn't an exact number as it includes all shared libraries.
+# This is done to catch memory leaks and suicide before it becomes a problem.
+# The default is to allow 512 MiB of RAM to be used. However, on some systems
+# with a very large number of sensors/scan agent data, a DB resync could cause
+# the RAM use to climb higher that this. If you find that ScanCore restarts 
+# when a dashboard restarts, then you can increase this value. Please note that
+# the value is expressed in bytes.
+#scancore::maximum_ram			=	536870912
+
 # Database connection variables.
 # 
 # Hostname or IP of the Striker dashboard with the database.
