* Updated InstallManifest->generate_cluster_conf() to set seld_fence=\"1\" for the clusterfs resource. This will help catch a failed storage service and fence the host node. * Made anvil-safe-start->avoid_duplicate_run() use the new 'scancore::update_age_limit' variable instead of statically setting it to 10 minutes. Also changed the default to 20 minutes. * Updated anvil-safe-start->wait_for_storage() to specifically call 'enable' against a failed/recovered storage service that was found to be in the 'disabled' state.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -274,6 +274,18 @@ scancore::enabled			=	1
 # the value is expressed in bytes.
 #scancore::maximum_ram			=	536870912
 
+# ScanCore will periodically get started by cron (default is once per minute).
+# When it starts, it checks to see if another copy is already running. If not,
+# it starts. If so, it looks to see how long ago the running copy completed a
+# scan. If the last scan was greated that this number of seconds ago, it 
+# assumes that it hung and terminates it.
+# 
+# Please be careful when tuning this. If your database is large and/or the
+# database hosts are slow, a resync could take a long time to finish. If this
+# is set to a low value, you can get into a case where ScanCore keeps killing
+# itself before it can resync.
+scancore::update_age_limit		=	1200
+
 # Database connection variables.
 # 
 # Hostname or IP of the Striker dashboard with the database.
