IMPORTANT CHANGE! * The ScanCore loop sleep timer has been changed to 60 seconds and an example config has been added to striker.conf to simplify user overrides.
Major bug fix for a rare failure scenario; Grab a coffee if you want to read the detail;

In a configuration with four PDUs, two per rack, sourced from two UPSes where each rack has a PDU from either UPS, and if one of those PDUs fail, the attached node will lose half if it's power and also lose its backup fence method. Later, if the UPSes lose input power before the PDU is repaired, the UPS with two good UPSes will be under a much higher load than the other UPS (who has had about half of it's load transfered to the peer UPS). This will cause one UPS to deplete a lot faster than theother. Because the emergency shutdown is based on the assumption that both nodes have equal power, shut down will not occur because the half-loaded UPS will show lots of remaining power. When the weaker UPS depletes, however, one of the nodes will fail. At this time, the surviving peer has lost both fence method because IPMI was lost with the node and one of the PDUs is damaged/removed. At this point, ScanCore, via scan-clustat, will see the peer's state get set to 'Offline' before the fence succeeds. This caused the last-known state of the peer to be marked as "off". So later, if the second UPS depletes, the remaining node will fail. If the nodes have been configured to boot on AC restore, and if single-node-start is enabled, the second node to fail will boot long before the other node. It will see that the peer was last seen as off and try to run a single-node-start operation. If the second UPS charges too slowly, then anvil-safe-start's delays will expire, cman will start and try to fence the lost peer. IPMI will fail because the peer still has no AC and will move on to the PDU fence method. This will fail because the other PDU is still dead, and the "off" state on the good PDU will be retained.

* The fix, in scan-clustat, wa

--- a/striker.conf
+++ b/striker.conf
@@ -286,6 +286,16 @@ scancore::enabled			=	1
 # itself before it can resync.
 scancore::update_age_limit		=	1200
 
+# By default, ScanCore will do a sweep once every minute. This means that all
+# agents will be invoked once per minute, and the ScanCore will sleep for 60
+# seconds. If you want to increase the scan frequency, reduce this delay. Note,
+# however, that it will generate more data which, in turn, will grow the 
+# ScanCore database faster and increase the overall load. On the otherhand, you
+# can increase the sleep time to reduce the rate at which data grows, but in 
+# this case, you increase the chance of missing an important event that comes
+# and goes between sweeps.
+#scancore::sleep_time			=	60
+
 # Database connection variables.
 # 
 # Hostname or IP of the Striker dashboard with the database.
