* More log cleanup. * Started working on a new ScanCore DB auto-archive feature.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -296,6 +296,18 @@ scancore::update_age_limit		=	1200
 # and goes between sweeps.
 #scancore::sleep_time			=	60
 
+# To keep ScanCore's database growth in check, an auto-archive mechanism is 
+# used where, at the end of each scan, the number of records in the history
+# schema for a given table are counted. When the number exceeds the trigger,
+# the 'count' number of records are written to a file, removed from the DB and
+# then the archive file is compressed. The archives are all stored in the 
+# specified directory using the name format '<agent>.<table>.<timestamp>.bz2'
+# and the archives are synced between dashboards for safe keeping. Archive
+# files are never removed automatically.
+scancore::archive::directory		=	/var/ScanCore/archives/
+scancore::archive::trigger		=	250000
+scancore::archive::count		=	100000
+
 # Database connection variables.
 # 
 # Hostname or IP of the Striker dashboard with the database.
