* Finished (but not tested) the DR target menu. * Created the shell of the new tools/anvil-find-drives program.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -70,6 +70,15 @@ sys::log::log_pid					=	0
 # This section is used to control the behaviour of various Striker and Anvil!
 # tools.
 
+# If the disaster recovery function is used, and if drive caching is enabled, 
+# DR jobs will look for a drive on either node as well as check for a drive on
+# the DR target machine. To avoid using the wrong drive, all drives will be
+# checked for a signature file. If a drive does NOT have a signature file, it
+# will NOT be used for DR caching purposes. By default, this signature file is
+# '.dr_cache' (not the leading '.'). If you wish to use a different signature,
+# you can specify the signature here. 
+#tools::dr::cache_signature		=	.dr_cache
+
 # Setting this to '1' will enable 'anvil-kick-apc-ups', which is a tool that
 # uses the Anvil!'s APC UPSes as a form of system-wide watchdog timer. When
 # enabled, the system will tell the UPS to power off after a set amount of time
