* Fixed typos and other bugs in Get.pm and ScanCore.pm. * Fixed the display of the DR Target form (not yet tested saving anything yet).
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -77,7 +77,7 @@ sys::log::log_pid					=	0
 # will NOT be used for DR caching purposes. By default, this signature file is
 # '.dr_cache' (not the leading '.'). If you wish to use a different signature,
 # you can specify the signature here. 
-#tools::dr::cache_signature		=	.dr_cache
+#tools::disaster_recovery::cache_signature	=	.dr_cache
 
 # Setting this to '1' will enable 'anvil-kick-apc-ups', which is a tool that
 # uses the Anvil!'s APC UPSes as a form of system-wide watchdog timer. When
