* Started working on a new 'health' table to make ScanCore a lot smarter about determining which node is less healthy and, thus, where to migrate servers to. * Got some work done on Striker's DR Jobs section.
Signed-off-by: Digimer <digimer@alteeve.ca>

--- a/striker.conf
+++ b/striker.conf
@@ -378,6 +378,11 @@ scancore::archive::count		=	100000
 #scancore::disable::power_shutdown	=	0
 #scancore::disable::thermal_shutdown	=	0
 
+# Normally, if one node becomes more healthy than the peer, it will migrate any
+# servers on the peer to itself. If you want disable this behaviour, set this 
+# to '0'.
+#scancore::disable::preventative_migration	=	0
+
 # Setting this to '1' will disable ScanCore's automatic booting of nodes that are
 # off. When enabled, nodes will be booted provided the power and temperature is
 # good and that the nodes were not cleanly stopped via Striker's WebUI.
